// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E Generates the correct event data for a Messenger Rooms Online event 1`] = `
{
  "categories": [],
  "description": "Description with json chars { woohoo hope this doesnt screw anything up ] [ ",
  "endTimestamp": null,
  "formattedDate": "Thursday, May 11, 2023 at 3:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02fJhgH3PJ1VW1HFwhxavCdRj7AJ3iji2FSHJk6Zr3hEYiGJvcVhJPno7aJcyz4CoQl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=1&ccb=1-7&_nc_sid=136b72&_nc_ohc=SdyF7-QRjGwQ7kNvwEJLLd8&_nc_oc=AdnRDFCsVjmOLxbyGFfkQQS74oH4Ih50wAWtuVJPktGuhTN8Jq_RGbjYY96K7yYC_6k&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&oh=00_AfPAKWCRcl2ayr_Pov-PtmyZo8SvSvCotGcSA2ExhpOGvw&oe=68888C3A",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fJhgH3PJ1VW1HFwhxavCdRj7AJ3iji2FSHJk6Zr3hEYiGJvcVhJPno7aJcyz4CoQl/",
    },
  ],
  "id": "564972362099646",
  "isOnline": true,
  "location": null,
  "name": "msgner rooms live event with " in name",
  "onlineDetails": {
    "type": "MESSENGER_ROOM",
    "url": null,
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1683838800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/564972362099646/",
  "usersResponded": 2,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a concert with multiple hosts & location info 1`] = `
{
  "categories": [],
  "description": "Ticket includes admission to Stampede Park

Sale Dates and Times:

Public Onsale : Fri, 24 Mar 2023 at 10:00 AM

Media Presale : Wed, 22 Mar 2023 at 10:00 AM

Stampede Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Saddledome Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Alberta Music Presale : Wed, 22 Mar 2023 at 10:00 AM

Better Business Bureau Presale : Wed, 22 Mar 2023 at 10:00 AM

Country Music Alberta Presale : Wed, 22 Mar 2023 at 10:00 AM

Artist Presale : Wed, 22 Mar 2023 at 10:00 AM

Venue Presale : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seats : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seat : Wed, 22 Mar 2023 at 12:00 PM

CSEC Insiders : Thu, 23 Mar 2023 at 10:00 AM

Aisle Seat Offer Presale : Wed, 22 Mar 2023 at 10:00 AM

Aisle Seat Offer Onsale : Fri, 24 Mar 2023 at 10:00 AM
",
  "endTimestamp": null,
  "formattedDate": "Friday, July 7, 2023 at 7:30 PM MDT",
  "hosts": [
    {
      "id": "100068207392255",
      "name": "Scotiabank Saddledome",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-1/281352750_2028415974017689_9212573442765953743_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=109&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=tCIUZzf3edUQ7kNvwFYjOe0&_nc_oc=AdljvdRkjJWeLXIvvBAN409JMeYWBG2K3tWoXWu-pClELRLgVZkbSuxJJTm8sYduv2U&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&_nc_gid=A-OUTfGKsXOB5qKGjxEDJg&oh=00_AfOS_aOYHOtPHCZI_D2Mz4QQmmdf3L8yMQPlQxRlkf60Bg&oe=6866F80B",
      },
      "type": "User",
      "url": "https://www.facebook.com/scotiabanksaddledome",
    },
    {
      "id": "100064516969267",
      "name": "Calgary Stampede",
      "photo": {
        "imageUri": "https://scontent.fkun1-1.fna.fbcdn.net/v/t39.30808-1/352087888_1034380311273324_7910170983351471836_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=108&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=Rg9L2lPDWIwQ7kNvwEDDh0l&_nc_oc=AdnioWIow_L2HK9h0o-aJ4ZUztwoq_Ito3H8vyEbRg-GEojKRmTOAmFQPUrbeXXvIo8&_nc_zt=24&_nc_ht=scontent.fkun1-1.fna&_nc_gid=A-OUTfGKsXOB5qKGjxEDJg&oh=00_AfMiDWnXizOnpVHxWay6Qlgg9-wNpe1ynxlBxqzGFfqEPg&oe=6866DC6B",
      },
      "type": "User",
      "url": "https://www.facebook.com/calgarystampede",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=101&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=8IpCh8jgCPgQ7kNvwHKyBOa&_nc_oc=Adn39_QCNIAKLDTrPdgZYN9SdLmW14ECwKF6snqZDDhfUbFWWnEpRzaY98CPiD7t-FE&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&_nc_gid=A-OUTfGKsXOB5qKGjxEDJg&oh=00_AfPvK-KwoqD4jqX0xapxrVMDLDbIfB-LBYP43tLZwL-4pQ&oe=6866FCC2",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
    {
      "id": "100044535845092",
      "name": "Pitbull",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-1/439064200_1017561226405063_8213471074013536032_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=1&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=_ZVGLL_QeesQ7kNvwEmvStp&_nc_oc=Adkd8s0Rhempn6COFrOFCXrF-O49ctVflr9hqcZezdPpQXMSCV4YODcrjDhtWARjRr8&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&_nc_gid=A-OUTfGKsXOB5qKGjxEDJg&oh=00_AfOvwx0OmsR3wMyvJfK6_Wj8FftYVHvzpRsLRjs6KfVZ2Q&oe=6866DBC3",
      },
      "type": "User",
      "url": "https://www.facebook.com/pitbull",
    },
  ],
  "id": "602005831971873",
  "isOnline": false,
  "location": {
    "address": "555 Saddledome Rise S.E.",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.037418735623,
      "longitude": -114.05197173357,
    },
    "countryCode": "CA",
    "description": "The Scotiabank Saddledome is Calgary's premier sports and entertainment venue.",
    "id": "426321674227135",
    "name": "Scotiabank Saddledome",
    "type": "PLACE",
    "url": "https://facebook.com/scotiabanksaddledome",
  },
  "name": "Pitbull with Special Guest Reve",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "10160954790708641",
    "imageUri": "https://scontent.fkun1-1.fna.fbcdn.net/v/t39.30808-6/336792249_949153626262984_8332769163095794984_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=75d36f&_nc_ohc=QSwhgY7S2NIQ7kNvwEqQkvh&_nc_oc=AdkZLWGRPw0ORxoMPa6qnc92OW_YCIfknQNTGSt61L9Y6NcmoslalpIGfF31EqiHcWM&_nc_zt=23&_nc_ht=scontent.fkun1-1.fna&_nc_gid=Dbd1Kz-YRphTgraZNzd1MA&oh=00_AfNk2b9nXf7Bo4nbzxHqPq-Isyfp-UkfxwcXRJw6YLA7sQ&oe=6866D6AD",
    "url": "https://www.facebook.com/photo/?fbid=10160954790708641&set=gm.602005851971871",
  },
  "siblingEvents": [],
  "startTimestamp": 1688779800,
  "ticketUrl": null,
  "timezone": "MDT",
  "url": "https://www.facebook.com/events/602005831971873/",
  "usersResponded": 1562,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a event with an end date & multiple dates 1`] = `
{
  "categories": [
    {
      "label": "Religion",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1763934757268181%5D%7D",
    },
  ],
  "description": "Christ is RISEN! Let's celebrate!

We might know the Easter story, but does it mean anything for us today? 

Come experience and celebrate what Easter offers, April 8/9 at FAC! 

Expect a 75-minute service filled with worship music, creative elements, and a message of hope from the Bible.

**Please note special service times: Saturday at 6:30 pm, Sunday at 9:15 & 11:15 am**

More info: https://www.faccalgary.com/easter",
  "endTimestamp": 1681065000,
  "formattedDate": "Sunday, April 9, 2023 at 11:15 AM – 12:30 PM MDT",
  "hosts": [
    {
      "id": "100064691376556",
      "name": "FAC Deerfoot",
      "photo": {
        "imageUri": "https://scontent.fkun1-1.fna.fbcdn.net/v/t39.30808-1/460987627_944177641081940_5270929113802053218_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=103&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=-kUXVFoPH4UQ7kNvwF2d7Z8&_nc_oc=AdlOqwH5hmn-BtEcOFhaGX77Qt_Kr3HzIcELOLzZIusdyrgEiADG-Ls7KrRDBw4_F10&_nc_zt=24&_nc_ht=scontent.fkun1-1.fna&_nc_gid=5Picke2yJRl_7DiGDeXPvw&oh=00_AfOljPyUuWWLKUkzn_U0ccUuQX7z_jDuO3l7DOAHNv6hpQ&oe=6866CF24",
      },
      "type": "User",
      "url": "https://www.facebook.com/facdeerfoot",
    },
  ],
  "id": "1137956703546266",
  "isOnline": false,
  "location": {
    "address": "12345 40 Street SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 50.937853434334,
      "longitude": -113.97362557296,
    },
    "countryCode": "CA",
    "description": "Joining Jesus in the renewal of all things! 
Official Facebook Page for First Alliance Church",
    "id": "118309434891614",
    "name": "FAC Deerfoot",
    "type": "PLACE",
    "url": "https://facebook.com/facdeerfoot",
  },
  "name": "Easter - Deerfoot & Online Campuses",
  "onlineDetails": null,
  "parentEvent": {
    "id": "1137956700212933",
  },
  "photo": {
    "id": "595982989234742",
    "imageUri": "https://scontent.fkun1-1.fna.fbcdn.net/v/t39.30808-6/481055432_1056019033231133_4786716278309143615_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=75d36f&_nc_ohc=yNNCZtzlc54Q7kNvwHFfiJ7&_nc_oc=AdmdgSRqis9KI964QlCh3J3d6YTmjByMGdx-9djxfm6NOw2YgLhboKbne9CfFRgICYc&_nc_zt=23&_nc_ht=scontent.fkun1-1.fna&_nc_gid=dtBNoBwlkezQCtOtFGt5fQ&oh=00_AfOKOpWoKjQ-atFHfQZKeio9L9u9igKMN7DAV5U1KoOfQA&oe=6866E354",
    "url": "https://www.facebook.com/photo/?fbid=595982989234742&set=gm.1137956736879596",
  },
  "siblingEvents": [
    {
      "endTimestamp": 1681065000,
      "id": "1137956703546266",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681060500,
    },
    {
      "endTimestamp": 1681057800,
      "id": "1137956710212932",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681053300,
    },
    {
      "endTimestamp": 1681004700,
      "id": "1137956706879599",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681000200,
    },
  ],
  "startTimestamp": 1681060500,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1137956700212933/?event_time_id=1137956703546266",
  "usersResponded": 20,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event hosted by Eventbrite 1`] = `
{
  "categories": [
    {
      "label": "Wellness",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1712245629067288%5D%7D",
    },
  ],
  "description": "Come bird  Beaverdam Flats from Refinery Park.  There will be open water and wetland areas to explore.

Come bird Refinery Park to Beaverdam Flats with Nature Calgary.   The pathway is along the river and can be slippery and icy at times. Please wear appropriate footwear.  This trip may not be suitable for all mobilities.  We welcome beginner and expert birders on our trips.
PLEASE NOTE WE WILL MEET AT PARKING LOT FOR REFINERY FLATS.
https://www.google.com/maps/place/Refinery+Park/@51.0051425,-114.019193,17z/data=!3m1!4b1!4m5!3m4!1s0x53717a7f5ddd6dd5:0x1b8647891750b9e2!8m2!3d51.0051425!4d-114.0170043
Binoculars are available to borrow for those who need them.",
  "endTimestamp": 1680543000,
  "formattedDate": "Monday, April 3, 2023 at 9:00 AM – 11:30 AM MDT",
  "hosts": [],
  "id": "252144510602906",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.01257,
      "longitude": -114.00271,
    },
    "countryCode": "CA",
    "description": null,
    "id": "768722671166814",
    "name": "4687 Barlow Trail Southeast,Calgary,T2B 3T6,CA",
    "type": "TEXT",
    "url": null,
  },
  "name": "Nature Calgary Birding - Refinery Park to Beaverdam Flats",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "10167524860335261",
    "imageUri": "https://scontent.fkun1-1.fna.fbcdn.net/v/t39.30808-6/337885002_189168827241357_2737797815564835189_n.jpg?stp=dst-jpg_p960x960_tt6&_nc_cat=107&ccb=1-7&_nc_sid=75d36f&_nc_ohc=eh7bcWNkOxYQ7kNvwEc2yLc&_nc_oc=Adm2oMUU7sE8YQaQaG62f-kP-r5nH695j6xS5Wdzjw-k6P-bDMsUa6rq9I95TaH841o&_nc_zt=23&_nc_ht=scontent.fkun1-1.fna&_nc_gid=lX24Fai4lt-hq0kZjy_xkA&oh=00_AfPnBKvSgeHl4T6aGezpOSEwenNgnWAxejD3JFP0xXb29g&oe=6866D6F1",
    "url": "https://www.facebook.com/photo/?fbid=10167524860335261&set=gm.252144523936238",
  },
  "siblingEvents": [],
  "startTimestamp": 1680534000,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/252144510602906/",
  "usersResponded": 0,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text address location 1`] = `
{
  "categories": [
    {
      "label": "Shopping",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1759906074034918%5D%7D",
    },
  ],
  "description": "This free one day event is the start up to Calgary's vibrant festival season, and encourages citizens to shake off their winter blues and reintroduce themselves to the thriving creative community in our city. 

Each spring, thousands of attendees come out to enjoy the unique and pedestrian friendly 4th Street venue, offering an array of musical talent, artisan vendors, quality entertainment and some perfect people watching. 

At the Lilac Festival, there is an activity made for all ages. This could mean a jump in the bouncer for the kids, discovering a great new band, choosing a perfect summer patio or searching for a trendy fashion; there is no shortage of things happening.",
  "endTimestamp": 1685923200,
  "formattedDate": "Sunday, June 4, 2023 at 10:00 AM – 6:00 PM MDT",
  "hosts": [
    {
      "id": "100050510798749",
      "name": "Lilac Festival",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-1/491553306_1221674636192885_5739177654127096451_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=104&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=L_FHUTEgYyYQ7kNvwHTM2IR&_nc_oc=Adm4ITTORNTbiLhso_xTRm5E9roz6Gg3eVNUr4KrFzsVjVEN3n3BU4dRsunpUyOnvgs&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&_nc_gid=ANlXYW1rWz5fI4Vc0KOnfw&oh=00_AfMhRgQSPiVK-r4YtGXboshHQKXFCM8YIm5_yFThNaIANw&oe=6866DF5C",
      },
      "type": "User",
      "url": "https://www.facebook.com/LilacFestival",
    },
  ],
  "id": "719931529922611",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.035320819142,
      "longitude": -114.0715755823,
    },
    "countryCode": "CA",
    "description": null,
    "id": "749222630104757",
    "name": "Lilac Festival",
    "type": "TEXT",
    "url": null,
  },
  "name": "4th Street Lilac Festival",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "749222690104751",
    "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-6/472570967_1152279459799070_954455182245359149_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=75d36f&_nc_ohc=HcKa3Ms_-gcQ7kNvwEbGh2M&_nc_oc=Admm3V2zS6U7CnuM3ItGTZWV5pQ2lJ5zfhqTkv6c_Mp8LoqX_R8H6P5wTfFlwLi4NBQ&_nc_zt=23&_nc_ht=scontent.fkun1-2.fna&_nc_gid=2lBhr6RnqnawbkEwyTN2hA&oh=00_AfMXYDyAvX9C2gorqJW0lfjtCgnbkw2jwftvZoWT_SB7yQ&oe=6866F094",
    "url": "https://www.facebook.com/photo/?fbid=749222690104751&set=gm.719931573255940",
  },
  "siblingEvents": [],
  "startTimestamp": 1685894400,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/719931529922611/",
  "usersResponded": 5939,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text location 1`] = `
{
  "categories": [],
  "description": "hbhjbjh",
  "endTimestamp": null,
  "formattedDate": "Tuesday, April 4, 2023 at 11:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02fJhgH3PJ1VW1HFwhxavCdRj7AJ3iji2FSHJk6Zr3hEYiGJvcVhJPno7aJcyz4CoQl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=1&ccb=1-7&_nc_sid=136b72&_nc_ohc=SdyF7-QRjGwQ7kNvwEJLLd8&_nc_oc=AdnRDFCsVjmOLxbyGFfkQQS74oH4Ih50wAWtuVJPktGuhTN8Jq_RGbjYY96K7yYC_6k&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&oh=00_AfPAKWCRcl2ayr_Pov-PtmyZo8SvSvCotGcSA2ExhpOGvw&oe=68888C3A",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fJhgH3PJ1VW1HFwhxavCdRj7AJ3iji2FSHJk6Zr3hEYiGJvcVhJPno7aJcyz4CoQl/",
    },
  ],
  "id": "526262926343074",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": null,
    "countryCode": null,
    "description": null,
    "id": "1260045608271508",
    "name": "kbhbj",
    "type": "TEXT",
    "url": null,
  },
  "name": "Event to test",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1680670800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/526262926343074/",
  "usersResponded": 1,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a ticket URL & city location 1`] = `
{
  "categories": [
    {
      "label": "Party",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B183019258855149%5D%7D",
    },
  ],
  "description": "The Dark Eighties in Calgary: 1977-2020s Edition

Tickets at https://thedarkeightiesspecialedition.eventbrite.ca
and on Ticket Tailor at https://www.tickettailor.com/events/12xuproductions/904667

$20 on the door

///we play///
EBM I GOTH I INDUSTRIAL I ITALO DISCO I NEW BEAT
NEW ROMANTICS I SYNTH POP I DARK WAVE I MINIMAL WAVE I POST PUNK I CULT 80S HITS I DEATHROCK + MORE!

Friday, May 5th 
The Junction
10pm-2am 

DJs Nebulae Complex + Chameleon

This time, we're not ONLY playing 80s but also dark tunes from after the 80s + a few late 70s punk/post punk tunes! 

FB: @thedarkeighties
Instagram: @12xuevents
Join our group!
https://www.facebook.com/groups/darkeighties
",
  "endTimestamp": 1683360000,
  "formattedDate": "Friday, May 5, 2023 at 10:00 PM – 2:00 AM MDT",
  "hosts": [
    {
      "id": "100070821304084",
      "name": "12XU",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-1/410227062_382882167415824_4051646999230968301_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=104&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=LM-pI0m_qDMQ7kNvwHTNYSI&_nc_oc=Adl4amjS3-YRubrFtnW2jY7nsBPSfa7Djocl0AMHXOUd5Yqzd5PNo4q2SGFXpKOcLiI&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&_nc_gid=GziJvA31zRLZ-HKr7XxWgg&oh=00_AfNiCpTvFsZdX57SjY6e3s2MfRbNuO3r2DeJNeUun_vrWg&oe=6866F2E6",
      },
      "type": "User",
      "url": "https://www.facebook.com/12XUevents",
    },
    {
      "id": "100063904024919",
      "name": "The Dark Eighties",
      "photo": {
        "imageUri": "https://scontent.fkun1-1.fna.fbcdn.net/v/t39.30808-1/332078465_858485495251843_6558149897498817316_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=108&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=ACFxczMPk4cQ7kNvwFXmflP&_nc_oc=AdkrUkyweMoxJn-dqfG32fzxYpzqpg7c49JpZWEfygPfH74KPAUYVVHzYwA-e_1bea0&_nc_zt=24&_nc_ht=scontent.fkun1-1.fna&_nc_gid=GziJvA31zRLZ-HKr7XxWgg&oh=00_AfO2mhWb3f6CIKaHtoP-BE-bZPYQOLb0b026_z3Gb21PhQ&oe=68670267",
      },
      "type": "User",
      "url": null,
    },
  ],
  "id": "1376686273147180",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.05,
      "longitude": -114.06666666667,
    },
    "countryCode": "CA",
    "description": null,
    "id": "992250685521992",
    "name": "Calgary, Alberta, Canada",
    "type": "TEXT",
    "url": null,
  },
  "name": "The Dark Eighties: 1977-2023 Edition",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "621131586693637",
    "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-6/483866251_1107783254695132_4478007887358984133_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=75d36f&_nc_ohc=nJLA3Bi24Z0Q7kNvwGrM_vR&_nc_oc=AdktwR1oZe0FOsGMkwvTndmY9NOkN2N3JJo4aOn3rnA9e3gmN76F8plymvHtjZv_0v0&_nc_zt=23&_nc_ht=scontent.fkun1-2.fna&_nc_gid=Vx3KprzMH93a0YicYY6gnQ&oh=00_AfOCV5eMx00dvDToJlqDo4IX25mg1wSE5fxP1F310XZFDg&oe=6866DF28",
    "url": "https://www.facebook.com/photo/?fbid=621131586693637&set=gm.1376686326480508",
  },
  "siblingEvents": [],
  "startTimestamp": 1683345600,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1376686273147180/",
  "usersResponded": 423,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a video cover 1`] = `
{
  "categories": [
    {
      "label": "Causes",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1284277608291920%5D%7D",
    },
  ],
  "description": "💡 Kaip atrodys ateities universitetas? Kokius uždavinius kelsime ateities aukštajam mokslui? Kaip ir kokias asmenybes ugdysime? Kaip pritaikysime švietimo sistemą prie laukiančių technologijų pokyčių? Susitikime padiskutuoti su profesoriumi, Vilniaus universiteto rektoriumi, Valstybės pažangos tarybos nariu dr. Rimvydu Petrausku apie Lietuvos ateities švietimą ir pasidalinti, kokią viziją 2050 metams turime mes.  

Pokalbį moderuos VšĮ „Šiauliai plius“ direktorė Giedrė Brazlauskaitė.

📍 Renginys vyks Šiaulių apskrities Povilo Višinskio viešosios bibliotekos Konferencijų salėje, Aušros alėja 62, Šiauliai
  
❗️Renginys atviras visiems, tačiau prašome užsiregistruoti https://forms.office.com/e/yQVDMreN2C 

Daugiau informacijos apie „Lietuva 2050” – www.Lietuva2050.lt

Ateitį kurkime šiandien!   
",
  "endTimestamp": 1684333800,
  "formattedDate": "Wednesday, May 17, 2023 at 4:00 PM – 5:30 PM EEST",
  "hosts": [
    {
      "id": "100067786593384",
      "name": "Lietuva 2050",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-1/353748572_586062753663273_3803358940549831479_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=111&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=_CndUH9YFecQ7kNvwF9nl_b&_nc_oc=Adl0u9QnuHkPr-ca5RqRO_okuqggPWJxREgboVst4Fhc_XFdjvSciyUi1wJ2mtPisaw&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&_nc_gid=o87DOCl9JrBIkpJwyrSI3Q&oh=00_AfNdNV-0tEoKCANQMbL2vMc9uSBxCSuMN1Jhu03nNx9Djg&oe=6866CE11",
      },
      "type": "User",
      "url": "https://www.facebook.com/Lietuva2050",
    },
    {
      "id": "100039182298687",
      "name": "VU Šiaulių akademija",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-1/274600858_487344632966234_2522454326585058130_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=105&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=e9qkN9EdgkkQ7kNvwG78isZ&_nc_oc=AdkOfsxkqIW51WeHpFHPZTczh4-_9XjA4_s-BmlUbqG8FUs5x-mgTOZ3YY7TzikBzpM&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&_nc_gid=o87DOCl9JrBIkpJwyrSI3Q&oh=00_AfNORoOJHI4B2n5UxoMwUdgINm9ZZNOcCrAud0tLsfS8zw&oe=6866F17C",
      },
      "type": "User",
      "url": "https://www.facebook.com/siauliu.akademija",
    },
    {
      "id": "100064306435250",
      "name": "Vilniaus universitetas / Vilnius University",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-1/274532730_5225887714128805_1147028878997655106_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=104&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=gcowzEIPv5oQ7kNvwGc0ERs&_nc_oc=AdmT6dtgTTm_gA5OxAqvtBbqsXoEvLaNqqf2Ydrc6Yg4GQlnv0OQL_X1_u0nP3lgu88&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&_nc_gid=o87DOCl9JrBIkpJwyrSI3Q&oh=00_AfOtqW_44Re94m_HrZnLi3FZC2W8RdbxEdy50zeoWEgnTg&oe=6866D7B2",
      },
      "type": "User",
      "url": "https://www.facebook.com/VilniusUniversity",
    },
    {
      "id": "100064644461523",
      "name": "Šiaulių apskrities Povilo Višinskio viešoji biblioteka",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-1/473965764_1047560367408769_1188670290210731717_n.jpg?stp=c293.0.1414.1414a_cp0_dst-jpg_s74x74_tt6&_nc_cat=100&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=G5fEKdt6zOMQ7kNvwFKkQIF&_nc_oc=Adnz6Dmte05ahd4dCM88XYuA-zU8iXkMjOZ8m1J2nIxXOPqt-szL7eQVw_FV-A58NLo&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&_nc_gid=o87DOCl9JrBIkpJwyrSI3Q&oh=00_AfOsyB1UiW1-5YMJmd09z699_MRfnoYU7YYKUzfzUPnD1w&oe=6866DE3A",
      },
      "type": "User",
      "url": "https://www.facebook.com/SAVB.info",
    },
  ],
  "id": "242861135088721",
  "isOnline": true,
  "location": null,
  "name": "Lietuva 2050: kokį vaidmenį atlieka švietimas, užtikrindamas valstybės ateitį?",
  "onlineDetails": {
    "type": "FB_LIVE",
    "url": null,
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1684328400,
  "ticketUrl": null,
  "timezone": "UTC+03",
  "url": "https://www.facebook.com/events/242861135088721/",
  "usersResponded": 123,
  "video": {
    "id": "2194658774256880",
    "thumbnailUri": "https://scontent.fkun1-1.fna.fbcdn.net/v/t15.5256-10/343286097_763205485254382_1688962917143675368_n.jpg?stp=dst-jpg_s960x960_tt6&_nc_cat=107&ccb=1-7&_nc_sid=032300&_nc_ohc=jRg87uBOcvwQ7kNvwGjFG48&_nc_oc=AdmXLDSMzwmbB4Z-SpdCiDEo1cfNLAGFGgNio8ZXGh-SeKphV01_WQlcWMo_5wV4Hdo&_nc_zt=23&_nc_ht=scontent.fkun1-1.fna&_nc_gid=xwy8eTndGDtU5jcj5K2Cjg&oh=00_AfMiY418NPmlNuxo81JyeWLQARvTn42nlMbsv1U9ApOyyA&oe=6866E46B",
    "url": "https://www.facebook.com/Lietuva2050/videos/2194658774256880/",
  },
}
`;

exports[`E2E Generates the correct event data for an event with multiple hosts, a place location & tickets 1`] = `
{
  "categories": [
    {
      "label": "Sports",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B607999416057365%5D%7D",
    },
  ],
  "description": "The #AEW Summer Canadian Tour concludes with #AEWCollision LIVE in Calgary, AB on Saturday, July 15 as part of Canada’s iconic Calgary Stampede at the Saddledome!

Tickets are ON SALE NOW!",
  "endTimestamp": null,
  "formattedDate": "Saturday, July 15, 2023 at 4:00 PM EDT",
  "hosts": [
    {
      "id": "100064709654009",
      "name": "All Elite Wrestling",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-1/448627833_865600602273587_4050110030248245393_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=1&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=PNY7CwN6gtcQ7kNvwEbEq5Z&_nc_oc=AdkS1EDaanTarc7c1oXOTTyAdVI_4ME6bbRRqhSSUZ15Hjh7tBNXi3o9TmqnJJHkAXI&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&_nc_gid=hm6Ooif-MVSer6DNf8lxWw&oh=00_AfOG_0CA2ocGkXLkbBHVOTHYKWA5_1Q6nHTm5XGNPaPcDA&oe=6866E4A9",
      },
      "type": "User",
      "url": "https://www.facebook.com/AEW",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=101&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=8IpCh8jgCPgQ7kNvwHKyBOa&_nc_oc=Adn39_QCNIAKLDTrPdgZYN9SdLmW14ECwKF6snqZDDhfUbFWWnEpRzaY98CPiD7t-FE&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&_nc_gid=hm6Ooif-MVSer6DNf8lxWw&oh=00_AfPXYzi6_EIk9AWbUwb-oSgCGVeQ83_E548KHqFHU9Lv9g&oe=6866FCC2",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
  ],
  "id": "941510027277450",
  "isOnline": false,
  "location": {
    "address": "1410 Stampede Trail SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.035629728479,
      "longitude": -114.05452196423,
    },
    "countryCode": "CA",
    "description": "The Calgary Stampede is a not-for-profit community organization that preserves and promotes our western heritage, cultures and community spirit.",
    "id": "104371842930883",
    "name": "Calgary Stampede",
    "type": "PLACE",
    "url": "https://facebook.com/calgarystampede",
  },
  "name": "All Elite Wrestling (AEW) Collision Calgary, Alberta Debut!",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "1273089803342464",
    "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t39.30808-6/473081369_1630277110957063_1481524804345515679_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=75d36f&_nc_ohc=ua8q22Eda5sQ7kNvwFXVv7u&_nc_oc=AdkY7JAYZ_U-iYX3JXlwfkWQwE6PaKLhUDoDyEM7RcE_52lJrxR6YOpGzz2stkyVqCI&_nc_zt=23&_nc_ht=scontent.fkun1-2.fna&_nc_gid=_Q61NaySGizxW6PWKm1OTw&oh=00_AfPU2J0X8YNcC3-axBxv4d5RTFv8CvAgmSDN-9iU_MhkRQ&oe=6866FD36",
    "url": "https://www.facebook.com/photo/?fbid=1273089803342464&set=gm.977705193657933",
  },
  "siblingEvents": [],
  "startTimestamp": 1689451200,
  "ticketUrl": null,
  "timezone": "EDT",
  "url": "https://www.facebook.com/events/941510027277450/",
  "usersResponded": 598,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an online event with a third-party URL 1`] = `
{
  "categories": [],
  "description": "",
  "endTimestamp": null,
  "formattedDate": "Friday, June 16, 2023 at 4:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02fJhgH3PJ1VW1HFwhxavCdRj7AJ3iji2FSHJk6Zr3hEYiGJvcVhJPno7aJcyz4CoQl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent.fkun1-2.fna.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=1&ccb=1-7&_nc_sid=136b72&_nc_ohc=SdyF7-QRjGwQ7kNvwEJLLd8&_nc_oc=AdnRDFCsVjmOLxbyGFfkQQS74oH4Ih50wAWtuVJPktGuhTN8Jq_RGbjYY96K7yYC_6k&_nc_zt=24&_nc_ht=scontent.fkun1-2.fna&oh=00_AfPAKWCRcl2ayr_Pov-PtmyZo8SvSvCotGcSA2ExhpOGvw&oe=68888C3A",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fJhgH3PJ1VW1HFwhxavCdRj7AJ3iji2FSHJk6Zr3hEYiGJvcVhJPno7aJcyz4CoQl/",
    },
  ],
  "id": "760928342374546",
  "isOnline": true,
  "location": null,
  "name": "Third party URL event",
  "onlineDetails": {
    "type": "THIRD_PARTY",
    "url": "https://www.example.com/hey",
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1686952800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/760928342374546/",
  "usersResponded": 1,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for events from group 1`] = `[]`;

exports[`E2E Generates the correct event data for events from group page 1`] = `[]`;

exports[`E2E Generates the correct event data for past events from page 1`] = `
[
  {
    "date": "Sat, Jun 28",
    "id": "675443538662259",
    "isCanceled": false,
    "isPast": true,
    "name": "FIESTA LATINA",
    "url": "https://www.facebook.com/events/675443538662259/",
  },
  {
    "date": "Thu, Jun 26",
    "id": "1083066063689840",
    "isCanceled": false,
    "isPast": true,
    "name": "Don´t Stop the Party",
    "url": "https://www.facebook.com/events/1083066063689840/",
  },
  {
    "date": "Sat, Jun 21",
    "id": "604744119333379",
    "isCanceled": false,
    "isPast": true,
    "name": "FIESTA LATINA",
    "url": "https://www.facebook.com/events/604744119333379/",
  },
  {
    "date": "Thu, Jun 19",
    "id": "1405328503836032",
    "isCanceled": false,
    "isPast": true,
    "name": "Don´t Stop the Party",
    "url": "https://www.facebook.com/events/1405328503836032/",
  },
  {
    "date": "Sat, Jun 14",
    "id": "724686633416987",
    "isCanceled": false,
    "isPast": true,
    "name": "FIESTA LATINA",
    "url": "https://www.facebook.com/events/724686633416987/",
  },
  {
    "date": "Fri, Jun 13",
    "id": "1085970633347006",
    "isCanceled": false,
    "isPast": true,
    "name": "UNA NOCHE DE REGGAETON",
    "url": "https://www.facebook.com/events/1085970633347006/",
  },
  {
    "date": "Thu, Jun 12",
    "id": "679402178297840",
    "isCanceled": false,
    "isPast": true,
    "name": "Don´t Stop the Party",
    "url": "https://www.facebook.com/events/679402178297840/",
  },
  {
    "date": "Sat, Jun 7",
    "id": "1786845752044762",
    "isCanceled": false,
    "isPast": true,
    "name": "FIESTA LATINA",
    "url": "https://www.facebook.com/events/1786845752044762/",
  },
]
`;

exports[`E2E Generates the correct event data for upcoming events from page 1`] = `
[
  {
    "date": "Fri, Jul 4 at 5:00 PM CEST",
    "id": "1104245268210814",
    "isCanceled": false,
    "isPast": false,
    "name": "LATINO BEACH PARTY - Beach Park Mlékojedy",
    "url": "https://www.facebook.com/events/1104245268210814/",
  },
]
`;

exports[`E2E Generates the correct event data for upcoming events from page 2`] = `
[
  {
    "date": "Fri, Jul 4 at 5:00 PM CEST",
    "id": "1104245268210814",
    "isCanceled": false,
    "isPast": false,
    "name": "LATINO BEACH PARTY - Beach Park Mlékojedy",
    "url": "https://www.facebook.com/events/1104245268210814/",
  },
]
`;
